# pbrt-v3

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doc.md  Dockerfile  LICENSE  LICENSE.txt  README.md  appveyor.yml  auto_run.sh  clean.sh  diffuse_length.py  exr_read.py  setup.sh  spherede.h
VS2013/: Common.props  pbrt-v3.sln
VS2013/bsdftest/: bsdftest.vcxproj  bsdftest.vcxproj.filters
VS2013/chi2test/: chi2test.vcxproj  chi2test.vcxproj.filters
VS2013/exravg/: exravg.vcxproj  exravg.vcxproj.filters
VS2013/exrcat/: exrcat.vcxproj  exrcat.vcxproj.filters
VS2013/exrdiff/: exrdiff.vcxproj  exrdiff.vcxproj.filters
VS2013/hdrtoldr/: hdrtoldr.vcxproj  hdrtoldr.vcxproj.filters
VS2013/obj2pbrt/: obj2pbrt.vcxproj  obj2pbrt.vcxproj.filters
VS2013/pbrt/: pbrt.vcxproj  pbrt.vcxproj.filters
VS2013/pbrt-v3/: pbrt-v3.vcxproj  pbrt-v3.vcxproj.filters
analysis/: cal_var.py  exr_read.py  select_area.py  selection.json
cmake/: FindILMBase.cmake  FindOpenEXR.cmake  FindSanitizers.cmake  sanitize-helpers.cmake
docs/: UsersGuide.md
images/: distanceestimatortest-1.exr  spherede.exr
ml/: config.py  iispt_dataset.py  iispt_net.py  iispt_transforms.py  km.py  main_interactive_view.py  main_stdio_net.py  main_train.py  pfm.py
scenes/: .gitignore  README.md  cbox-collimate.pbrt  cbox-vpt.pbrt  cbox.pbrt  foam.pbrt  guide.pbrt  killeroo-simple.pbrt  nw-foam7.pbrt  simple.pbrt
src/: .clang-format  CMakeLists.txt  Makefile  SConscript  SConstruct
src/accelerators/: bvh.cpp  bvh.h  kdtreeaccel.cpp  kdtreeaccel.h  lighttree.cpp  lighttree.h
src/cameras/: environment.cpp  environment.h  hemispheric.cpp  hemispheric.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h  realistic.cpp  realistic.h
src/core/: api.cpp  api.h  bssrdf.cpp  bssrdf.h  camera.cpp  camera.h  efloat.cpp  efloat.h  error.cpp  error.h  fileutil.cpp  fileutil.h  film.cpp  film.h  filter.cpp  filter.h  floatfile.cpp  floatfile.h  fp16.h  geometry.cpp  geometry.h  half.h  image.cpp  image.h  imageio.cpp  imageio.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  interpolation.cpp  interpolation.h  light.cpp  light.h  lightdistrib.cpp  lightdistrib.h  lowdiscrepancy.cpp  lowdiscrepancy.h  material.cpp  material.h  (+56 more)
src/core/generated_parser/: pbrtlex.cpp  pbrtparse.cpp
src/ext/: .gitignore  ArHosekSkyModel.c  rply.cpp  rply.h  stb_image_write.h  targa.cpp  targa.h  tinyexr.cpp  tinyexr.h
src/ext/rapidjson/: README.txt
src/film/: distancefilm.cpp  distancefilm.h  imagefilm.cpp  imagefilm.h  intensityfilm.cpp  intensityfilm.h  normalfilm.cpp  normalfilm.h  nullpfmitem.h  pfmitem.h  rgbpfmitem.h  scalarpfmitem.h
src/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
src/integrators/: ao.cpp  ao.h  bdpt.cpp  bdpt.h  directlighting.cpp  directlighting.h  iispt.cpp  iispt.h  iispt_d.cpp  iispt_d.h  iispt_estimator_integrator.cpp  iispt_estimator_integrator.h  iisptfilmmonitor.cpp  iisptfilmmonitor.h  iisptfilmtile.cpp  iisptfilmtile.h  iisptnnconnector.cpp  iisptnnconnector.h  iisptpixel.h  iisptrenderrunner.cpp  iisptrenderrunner.h  iisptschedulemonitor.cpp  iisptschedulemonitor.h  mlt.cpp  mlt.h  path.cpp  path.h  sppm.cpp  sppm.h  volpath.cpp  volpath.h  whitted.cpp  whitted.h
src/lights/: collimated.cpp  collimated.h  diffuse.cpp  diffuse.h  distant.cpp  distant.h  goniometric.cpp  goniometric.h  infinite.cpp  infinite.h  point.cpp  point.h  projection.cpp  projection.h  spot.cpp  spot.h
src/main/: pbrt.cpp
src/materials/: #disney.cpp#  .#disney.cpp  disney.cpp  disney.h  fourier.cpp  fourier.h  glass.cpp  glass.h  hair.cpp  hair.h  kdsubsurface.cpp  kdsubsurface.h  matte.cpp  matte.h  metal.cpp  metal.h  mirror.cpp  mirror.h  mixmat.cpp  mixmat.h  plastic.cpp  plastic.h  substrate.cpp  substrate.h  subsurface.cpp  subsurface.h  subsurfaceDirpole.cpp  subsurfaceDirpole.h  translucent.cpp  translucent.h  uber.cpp  uber.h
src/media/: grid.cpp  grid.h  homogeneous.cpp  homogeneous.h
src/samplers/: halton.cpp  halton.h  maxmin.cpp  maxmin.h  random.cpp  random.h  sobol.cpp  sobol.h  stratified.cpp  stratified.h  zerotwosequence.cpp  zerotwosequence.h
src/shapes/: bilinearpatch.cpp  bilinearpatch.h  cone.cpp  cone.h  curve.cpp  curve.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  distanceestimator.cpp  distanceestimator.h  heightfield.cpp  heightfield.h  hyperboloid.cpp  hyperboloid.h  infiniteroundboxde.cpp  infiniteroundboxde.h  infinitespherede.cpp  infinitespherede.h  infinitespheregridde.cpp  infinitespheregridde.h  loopsubdiv.cpp  loopsubdiv.h  mandelbulbde.cpp  mandelbulbde.h  nurbs.cpp  nurbs.h  paraboloid.cpp  paraboloid.h  plymesh.cpp  plymesh.h  sphere.cpp  sphere.h  spherede.cpp  spherede.h  triangle.cpp  triangle.h
src/tests/: analytic_scenes.cpp  animatedtransform.cpp  bitops.cpp  bounds.cpp  bsdfs.cpp  exr.cpp  fileutil.cpp  find_interval.cpp  fourierbsdf.cpp  fp_tests.cpp  hair.cpp  half.cpp  hg.cpp  iispt.h  image.cpp  imageio.cpp  parallel.cpp  parser.cpp  print.cpp  sampling.cpp  shapes.cpp  spectrum.cpp  texcache.cpp
src/tests/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
src/textures/: bilerp.cpp  bilerp.h  checkerboard.cpp  checkerboard.h  constant.cpp  constant.h  dots.cpp  dots.h  fbm.cpp  fbm.h  imagemap.cpp  imagemap.h  marble.cpp  marble.h  mix.cpp  mix.h  ptex.cpp  ptex.h  scale.cpp  scale.h  uv.cpp  uv.h  windy.cpp  windy.h  wrinkled.cpp  wrinkled.h
src/tools/: bsdftest.cpp  chi2test.cpp  childprocess.hpp  cyhair2pbrt.cpp  exravg.cpp  exrcat.cpp  exrdiff.cpp  hdrtoldr.cpp  iisptmathutils.h  iisptpoint2i.h  iisptrng.cpp  iisptrng.h  imgtool.cpp  obj2pbrt.cpp  ply.c  ply.h  ply2pbrt.c  tifftoexr.cpp
temporal/: opts.py  shot_noise_removal.py  transient_read.py
tests/: dragon_path_beam.pbrt  dragon_path_dirpole.pbrt  dragon_sppm_dirpole.pbrt  sphere_path_beam.pbrt  sphere_path_dirpole.pbrt  sphere_sppm_beam.pbrt  sphere_sppm_dirpole.pbrt
tools/: package-lock.json  package.json  pfm.js  test_python_child.py  test_python_child_bin.py
(+27 files in other folders)
